--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Readex Pro', sans-serif;
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* 
+.container-fluid {
+  padding: 1% 9%;
+}
+.title
+{
+  padding: 25px;
+  font-size: 5.5rem;
+  text-align: center;
+}
+
+
+.input {
+  padding: .7rem 1.5rem;
+  width: 100%;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(66, 66, 66, 0.8);
+  background: rgba(255,255,255, 0.1);
+  color: #000;
+}
+::placeholder {
+  text-align: center;
+  color: #b4b3b3;
+}
+
+
+@media screen and (max-width:920px){
+  .title {
+    font-size: 2.5rem;
+
+  }
+} */
